# HalfwayMedia

./: .clang-format  .gitignore  .gitmodules  ADTSHeader.h  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  AudioTime.cpp  AudioTime.h  AudioTranscoder.cpp  AudioTranscoder.h  CMakeLists.txt  ImageConversion.cpp  ImageConversion.h  JitterBuffer.cpp  JitterBuffer.h  LICENSE  LiveStreamIn.cpp  LiveStreamIn.h  LiveStreamOut.cpp  LiveStreamOut.h  Makefile  MediaFileIn.cpp  MediaFileIn.h  MediaFileOut.cpp  MediaFileOut.h  MediaFramePipeline.cpp  MediaFramePipeline.h  MediaIn.cpp  MediaIn.h  MediaInfo.cpp  MediaInfo.h  MediaOut.cpp  MediaOut.h  README.md  RawFileIn.cpp  RawFileIn.h  RawFileOut.cpp  RawFileOut.h  (+14 more)
assets/: play-rtp-aac.sdp  play-rtp-h264.sdp
doc/: framework.vsdx
src/: CMakeLists.txt  main.cpp
src/agent/base/: event_definition.h  media_frame_pipeline.cpp  media_frame_pipeline.h  media_sink.cpp  media_sink.h  media_source.cpp  media_source.h
src/agent/fake_data/: fake_data_source.cpp  fake_data_source.h
src/agent/media_file/: media_file_sink.cpp  media_file_sink.h  media_file_source.cpp  media_file_source.h  raw_file_sink.cpp  raw_file_sink.h
src/agent/rtp_stream/: rtp_sink.cpp  rtp_sink.h
src/agent/rtsp_stream/: rtsp_source.cpp  rtsp_source.h  sample.sdp
src/apps/: rtp_pusher.cpp  rtsp_client.cpp
src/common/: base64.cpp  base64.h  data_buffer.cpp  data_buffer.h  file_io.cpp  file_io.h  frame.h  log.cpp  log.h  noncopyable.h  singleton.h  thread_pool.cpp  thread_pool.h  utils.cpp  utils.h
src/network/: base_server.h  event_processor.cpp  event_processor.h  event_reactor.cpp  event_reactor.h  iclient_listener.h  iserver_listener.h  network_common.h  session.h  session_impl.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
src/network/test/: CMakeLists.txt  tcp_client.cxx  tcp_echo_server.cxx  udp_client.cxx  udp_echo_server.cxx
src/protocol/aac/: adts_header.h
src/protocol/rtcp/: rtcp.cpp  rtcp.h
src/protocol/rtcp/test/: CMakeLists.txt  rtcp_test.cxx
src/protocol/rtp/: rtp_packet.cpp  rtp_packet.h  rtp_packet_aac.cpp  rtp_packet_aac.h  rtp_packet_h264.cpp  rtp_packet_h264.h  rtp_sorter.cpp  rtp_sorter.h
src/protocol/rtsp/: rtsp_common.cpp  rtsp_common.h  rtsp_request.cpp  rtsp_request.h  rtsp_response.cpp  rtsp_response.h  rtsp_sdp.cpp  rtsp_sdp.h  rtsp_url.h
src/session/: rtp_pusher_session.cpp  rtp_pusher_session.h  rtsp_client_session.cpp  rtsp_client_session.h  rtsp_recoder_session.cpp  rtsp_recorder_session.h
